internal/fixtures/architecture/negative/concrete-adapter/apps/api/src/deepwork_api/application/bad.py
from deepwork_api.adapters.fixture import VALUE

FORBIDDEN = VALUE
